Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release

2018-05-20 MWJ  3.1.006  OTA release
- Web status: panel auto updates, reboot button, SD card and modem status and control
- Twizy: sufficient charge notifications separated from charge state
- Webserver: setup wizard
- Notifications for charge and other standard events
- Notifications for vehicle error fault codes
- Notifications when new firmware is available / installed (autoflash)
- Charge Time Predictor for Tesla Roadster

2018-05-01 MWJ  3.1.005  OTA release
- Vehicle: 12V battery monitoring
    vehicle [12v.alert] = 1.6       Voltage drop alert threshold in V vs. reference
- OTA: automatic daily firmware updates (wifi only)
    auto [ota] = yes                Enable/disable
    ota [auto.hour] = 2             Hour for daily check
- Logging: persistent configuration, file cycling, web config UI:
    log [file.enable] = no          Enable/disable file logging
    log [file.maxsize] = 1024       Max log file size in kB, 0 = no cycling
    log [file.path] = ""            Log path, if on /sd watches sd.mounted
    log [level]                     Default level
    log [level.<tag>]               Component levels
- Reverse Engineering Tools enhancements
- Tesla Roadster CAC support
- Miscellaneous bug fixes and enhancements

2018-04-17 MWJ  3.1.004  OTA release
OTA release providing minor improvements and fixes.

- Tesla Model S: Add support for v.bat.soc, v.pos.speed and park/drive status metrics
- Tesla Roadster: Fixes for charge/drive mode on v1.x and v2.x cars
- SD CARD: Provide configurable sdcard parameters:
    sdcard [maxfreq.khz] = 16000         Maximum frequency (in kHz) of SD CARD bus
    sdcard [automount] = yes             Automatically mount SD CARD on insertion
- Boot: store & send crash debug info (*-OVM-DebugCrash records)
- OTA: Support for configurable release tag and server URL
    ota [tag] = main
    ota [server] = api.openvehicles.com/firmware/ota